# veo-framework

./: CONTRIBUTORS.md  FRAMEWORK.md  LICENSE  README.md  README_TOOL.md  pyproject.toml
src/veo/: __init__.py  cli.py  comparator.py  factcheck.py  recurrence.py  similarity.py  store.py
src/veo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: test_veo.py
tests/data/: plain_comparator.txt  reflective_transcript.txt  session1_turns.txt  session2_turns.txt  source_fact.txt
